# ywpi

./: .gitignore  Makefile  README.md  agent.py  client.py  detector.py  docker-compose.yaml  fixup_generated_files.py  hub.proto  hub_pb2.py  hub_pb2_grpc.py  models.py  pt.py  pyproject.toml  requirements-additional-types.txt  requirements-server.txt  requirements.txt  server.py  setup.py
agents/: loader.py
docs/: README.md  long_description.md
hub/: __main__.py  agent_repository.py  agents_repository.py  channel.py  event_repository.py  hub_models.py  hub_pb2.py  hub_pb2_grpc.py  main.py  models.py  requirements.txt  tasks_respository.py
hub/events/: repository.py
hub/tools/: consumer.py
server/: db.py  events.py  hub.proto  hub_models.py  main.py  models.py  subscribers.py
server/app/: db.py  events.py  execution_manager.py  hub_pb2.py  hub_pb2.pyi  hub_pb2_grpc.py  main.py  models.py
tests/: agent.py  get_agents.py  handle_args.py  request.py  test_run_task.py
web/: README.md  package-lock.json  package.json  vite.config.ts
web/public/: index.html
web/src/: AgentsPage.tsx  App.js  App.tsx  Chat.tsx  DocumentsPage.tsx  Header.tsx  MethodPage.jsx  MethodPage.tsx  OpenLayerTiffRender.jsx  OpenLayerTiffRender.tsx  SideBar.tsx  Ws.js  Ws.tsx  hooks.ts  index.css  setupProxy.js  store.ts  styles.css  typeTraits.js
ywpi/: README.md  __init__.py  additional_types.py  api.py  cli.py  decorators.py  handle_args.py  hub.proto  hub_models.py  hub_pb2.py  hub_pb2.pyi  hub_pb2_grpc.py  io_manager.py  main.py  models.py  serialization.py  tracking.py  types.py
(+59 files in other folders)
